[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "A collection of small math games."
authors = ["Elena Tsvetkova <git@etdev.space>"]
classifiers = [
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
readme = "README.md"
repository = "https://github.com/i-am-not-amused/python-project-49"
packages = [
    { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
